* Fixed: Messages close after 10 seconds of the first one opened, not the last.
* Improved how failed comment post handling works.
* Removed individual settings for enabled login fields in favor of an array.
* Added locale string for individual required input error messages.
* Added a CSS class for styling required login inputs.
* Minor modifications to some icons.
* Improved custom login code.
* Renamed a couple variables.
* Reordered some functions.
* Improved default theme.


Changes by Jacob Barkdull 2015-12-12
--------------------------------------------------------------------------------
* Locales

	- Replaced "_TITLE_", "_NUM_", and "_TIME_" with format specifiers.
	- Now using printf functions instead of str_replace for locale strings.
	- "Top of Thread" changed to "In reply to %s".
	- Merged improvements to Spanish locale.
	- Added Brazilian Portuguese locale.
	- Added Romanian locale.


* hashover/scripts/writecomments.php

	- Login code decoupled into separate files.
	- `kickback ()` method no longer exits script.
	- Class methods now have return values.

	- Methods for posting and editing comments now return the comment as an
	  array when AJAX requests are made. This allows the receiving code to
	  encode the comment as JSON for AJAX requests.


* Added new Login and DefaultLogin classes

	- New login class for handling custom login mechanisms.
	- New default login class for default login mechanism.


* hashover/scripts/postcomments.php

	- New file for posting comments, both the traditional way and via AJAX.
	- This file also handles login.


* hashover/scripts/javascript-mode.php

	- Added AJAX comment posting and editing.
	- Comment and e-mail form validation now applies to edit forms as well.
	- Edit forms now have their own message element for displaying errors.
	- Fixed: Onclick only attached to one embedded image per comment.
	- Fixed: Only one of multiple open message dialogs closing.
	- Reply parsing now has access to their parent comment.