@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // German text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Kommentar hier eingeben (alle anderen Felder sind optional)',
-	'reply-form'		=> 'Antwort hier eingeben (alle anderen Felder sind optional)',
+	'comment-form'		=> 'Kommentar hier eingeben...',
+	'reply-form'		=> 'Antwort hier eingeben...',
 	'form-tip'		=> 'Akzeptiertes HTML: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; wird als HTML dargestellt, URLs werden automatisch zu Links umgewandelt und mit [img]Bild-URL[/img] werden externe Bilder angezeigt.',
 	'post-button'		=> 'Kommentar hinzufügen',
 	'login'			=> 'Anmelden',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> 'Abbrechen',
 	'reply-to-comment'	=> 'Auf Kommentar antworten',
 	'edit-your-comment'	=> 'Kommentar bearbeiten',
+	'optional'		=> 'Optional',
+	'required'		=> 'Erforderlich',
 	'name'			=> 'Name',
-	'name-tip'		=> 'Name (optional)',
+	'name-tip'		=> 'Name (%s)',
 	'password'		=> 'Passwort',
-	'password-tip'		=> 'Passwort (optional, erlaubt das Bearbeiten oder Löschen dieses Kommentars)',
+	'password-tip'		=> 'Passwort (%s, erlaubt das Bearbeiten oder Löschen dieses Kommentars)',
 	'confirm-password'	=> 'Passwort Bestätigen',
 	'email'			=> 'E-Mail-Adresse',
-	'email-tip'		=> 'E-Mail-Adresse (optional, für E-Mail-Benachrichtigungen)',
+	'email-tip'		=> 'E-Mail-Adresse (%s, für E-Mail-Benachrichtigungen)',
 	'website'		=> 'Webseite',
-	'website-tip'		=> 'Webseite (optional)',
+	'website-tip'		=> 'Webseite (%s)',
 	'logged-in'		=> 'Du hast dich erfolgreich angemeldet!',
 	'logged-out'		=> 'Du hast dich erfolgreich abgemeldet!',
 	'comment-needed'	=> 'Du hast den Kommentar falsch eingegeben. Bitte benutze das Formular unten.',
