@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // English text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Type Comment Here (other fields optional)',
-	'reply-form'		=> 'Type Reply Here (other fields optional)',
+	'comment-form'		=> 'Type comment here...',
+	'reply-form'		=> 'Type reply here...',
 	'form-tip'		=> 'Accepted HTML: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; escapes HTML, URLs automagically become links, and [img]URL here[/img] will display an external image.',
 	'post-button'		=> 'Post Comment',
 	'login'			=> 'Login',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> 'Cancel',
 	'reply-to-comment'	=> 'Reply To Comment',
 	'edit-your-comment'	=> 'Edit Your Comment',
+	'optional'		=> 'Optional',
+	'required'		=> 'Required',
 	'name'			=> 'Name',
-	'name-tip'		=> 'Name (optional)',
+	'name-tip'		=> 'Name (%s)',
 	'password'		=> 'Password',
-	'password-tip'		=> 'Password (optional, allows you to edit or delete this comment)',
+	'password-tip'		=> 'Password (%s, allows you to edit or delete this comment)',
 	'confirm-password'	=> 'Confirm Password',
 	'email'			=> 'E-mail Address',
-	'email-tip'		=> 'E-mail Address (optional, for e-mail notifications)',
+	'email-tip'		=> 'E-mail Address (%s, for e-mail notifications)',
 	'website'		=> 'Website',
-	'website-tip'		=> 'Website (optional)',
+	'website-tip'		=> 'Website (%s)',
 	'logged-in'		=> 'You have been successfully logged in!',
 	'logged-out'		=> 'You have been successfully logged out!',
 	'comment-needed'	=> 'You failed to enter a proper comment. Use the form below.',
