@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Spanish text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Escriba un comentario aquí (otros campos son opcionales)',
-	'reply-form'		=> 'Escriba su respuesta aquí (otros campos opcionales)',
+	'comment-form'		=> 'Escriba un comentario aquí...',
+	'reply-form'		=> 'Escriba su respuesta aquí...',
 	'form-tip'		=> 'HTML Aceptado: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; escapa, Las URLs automágicamente se vuelven links, y [img] URL de imagen [/img] mostrará una imagen externa.',
 	'post-button'		=> 'Comentar',
 	'login'			=> 'Iniciar Sesión',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> 'Cancelar',
 	'reply-to-comment'	=> 'Responder al Comentario',
 	'edit-your-comment'	=> 'Editar tu Comentario',
+	'optional'		=> 'Opcional',
+	'required'		=> 'Requiere',
 	'name'			=> 'Nombre',
-	'name-tip'		=> 'Nombre (opcional)',
+	'name-tip'		=> 'Nombre (%s)',
 	'password'		=> 'Contraseña',
-	'password-tip'		=> 'Contraseña (opcional, le permite editar o eliminar su comentario)',
+	'password-tip'		=> 'Contraseña (%s, le permite editar o eliminar su comentario)',
 	'confirm-password'	=> 'Confirmar Contraseña',
 	'email'			=> 'E-mail',
-	'email-tip'		=> 'Dirección de correo electrónico (para notificaciones, opcional)',
+	'email-tip'		=> 'Dirección de correo electrónico (para notificaciones, %s)',
 	'website'		=> 'Sitio Web',
-	'website-tip'		=> 'Sitio Web (opcional)',
+	'website-tip'		=> 'Sitio Web (%s)',
 	'logged-in'		=> '¡Iniciaste sesión correctamente!',
 	'logged-out'		=> '¡Cerraste sesión correctamente!',
 	'comment-needed'	=> 'No hiciste ningún comentario valido. Utilice el siguiente formulario.',
