@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // French text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Écrivez ici votre commentaire (les autres champs sont facultatifs)',
-	'reply-form'		=> 'Écrivez ici votre réponse (les autres champs sont facultatifs)',
+	'comment-form'		=> 'Écrivez ici votre commentaire...',
+	'reply-form'		=> 'Écrivez ici votre réponse...',
 	'form-tip'		=> 'HTML accepté: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; échappe le HTML, les URLs sont transformées en liens, et [img]URL ici[/img] fait apparaître une image externe.',
 	'post-button'		=> 'Publier ce commentaire',
 	'login'			=> 'Connecté',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> 'Annuler',
 	'reply-to-comment'	=> 'Répondre au commentaire',
 	'edit-your-comment'	=> 'Éditer votre commentaire',
+	'optional'		=> 'Optionnel',
+	'required'		=> 'Obligatoire',
 	'name'			=> 'Nom',
-	'name-tip'		=> 'Nom (optionnel)',
+	'name-tip'		=> 'Nom (%s)',
 	'password'		=> 'Mot de passe',
-	'password-tip'		=> 'Mot de passe (optionnel, vous permet d\'éditer ou de supprimer ce commentaire)',
+	'password-tip'		=> 'Mot de passe (%s, vous permet d\'éditer ou de supprimer ce commentaire)',
 	'confirm-password'	=> 'Confirmer le mot de passe',
 	'email'			=> 'Adresse E-mail',
-	'email-tip'		=> 'Adresse E-mail (optionnel, pour les notifications e-mail)',
+	'email-tip'		=> 'Adresse E-mail (%s, pour les notifications e-mail)',
 	'website'		=> 'Site Internet',
-	'website-tip'		=> 'Site Internet (optionnel)',
+	'website-tip'		=> 'Site Internet (%s)',
 	'logged-in'		=> 'Vous avez connecté avec succès!',
 	'logged-out'		=> 'Vous avez deconnecté avec succès!',
 	'comment-needed'	=> 'Vous avez échoué à entrer un commentaire approprié. Utilisez le formulaire ci-dessous.',
