@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Japanese text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'ここにコメントを入力し（その他のフィールドはオプショナル）',
-	'reply-form'		=> 'ここに返信を入力し（その他のフィールドはオプショナル）',
+	'comment-form'		=> 'ここにコメントを入力し...',
+	'reply-form'		=> 'ここに返信を入力し...',
 	'form-tip'		=> 'HTML容認：&lt;b&gt;、&lt;u&gt;、&lt;i&gt;、&lt;s&gt;、&lt;pre&gt;、&lt;ul&gt;、&lt;ol&gt;、&lt;li&gt;、&lt;blockquote&gt;、&lt;code&gt;はHTMLをエスケープ、URLは自動的にリンクになり、とここで[img]URLここ[/img]外部画像を表示します。',
 	'post-button'		=> 'コメントポスト',
 	'login'			=> 'ログイン',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> '取り消す',
 	'reply-to-comment'	=> 'コメントへ返信',
 	'edit-your-comment'	=> 'あなたのコメントを編集',
+	'optional'		=> 'オプショナル',
+	'required'		=> '必須です',
 	'name'			=> '名字',
-	'name-tip'		=> '名字 (オプショナル)',
+	'name-tip'		=> '名字 (%s)',
 	'password'		=> 'パスワード',
-	'password-tip'		=> 'パスワード（オプショナル, 編集またはこのコメント削除することができます）',
+	'password-tip'		=> 'パスワード（%s, 編集またはこのコメント削除することができます）',
 	'confirm-password'	=> '確認パスワード',
 	'email'			=> 'メールアドレス',
-	'email-tip'		=> 'メールアドレス (オプショナル, 電子メール通知のための)',
+	'email-tip'		=> 'メールアドレス (%s, 電子メール通知のための)',
 	'website'		=> 'ウェブサイト',
-	'website-tip'		=> 'ウェブサイト (オプショナル)',
+	'website-tip'		=> 'ウェブサイト (%s)',
 	'logged-in'		=> 'あなたは、正常にログインされています！',
 	'logged-out'		=> 'あなたは、正常にログアウトされています!',
 	'comment-needed'	=> 'あなたが適切なコメントを入力ていませんでした。下記のフォームを使用。',
