@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Polish text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Napisz komentarz (pozostałe pola opcjonalne)',
-	'reply-form'		=> 'Napisz odpowiedź (pozostałe pola opcjonalne)',
+	'comment-form'		=> 'Napisz komentarz...',
+	'reply-form'		=> 'Napisz odpowiedź...',
 	'form-tip'		=> 'Akceptowany HTML: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; escapes HTML, URLe automatycznie zamieniają się w linki, a [img]URL tutaj[/img] wyświetli zewnętrzny obrazek.',
 	'post-button'		=> 'Wyślij komentarz',
 	'login'			=> 'Zaloguj Się',
@@ -34,20 +34,22 @@ $locale = array (
 	'cancel'		=> 'Anuluj',
 	'reply-to-comment'	=> 'Odpowiedz na komentarz',
 	'edit-your-comment'	=> 'Edytuj Komentarz',
+	'optional'		=> 'Opcjonalne',
+	'required'		=> 'Wymagane',
 	'name'			=> 'Imię',
-	'name-tip'		=> 'Imię (opcjonalne)',
+	'name-tip'		=> 'Imię (%s)',
 	'password'		=> 'Hasło',
-	'password-tip'		=> 'Hasło (opcjonalne, pozwala edytować lub usunąć to komentarz)',
+	'password-tip'		=> 'Hasło (%s, pozwala edytować lub usunąć to komentarz)',
 	'confirm-password'	=> 'Potwierdź hasło',
 	'email'			=> 'Adres E-mail',
-	'email-tip'		=> 'Adres E-mail (opcjonalne, dla powiadomień e-mail)',
+	'email-tip'		=> 'Adres E-mail (%s, dla powiadomień e-mail)',
 	'website'		=> 'Strona www',
-	'website-tip'		=> 'Strona www (opcjonalne)',
+	'website-tip'		=> 'Strona www (%s)',
 	'logged-in'		=> 'Zostałeś pomyślnie zalogowany!',
 	'logged-out'		=> 'Zostałeś pomyślnie wylogowany!',
 	'comment-needed'	=> 'Wpisz komentarz do właściwego pola. Użyj formularza poniżej.',
 	'reply-needed'		=> 'Wpisz odpowiedź do właściwego pola. Użyj formularza poniżej.',
-	'field-needed'		=> '%s e-mail jest wymagane.',
+	'field-needed'		=> '%s jest wymagane.',
 	'post-fail'		=> 'Komentarz nie wysłany! Nie masz wystarczających uprawnień.',
 	'post-reply'		=> 'Wyślij odpowiedź',
 	'delete'		=> 'Skasuj',
