@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Brazilian Portuguese  text for forms, buttons, links, and tooltips
 $locale = array(
-	'comment-form'		=> 'Digite aqui seu comentário. (Outros campos opcionais.)',
-	'reply-form'		=> 'Digite a resposta aqui.(Outros campos opcionais.)',
+	'comment-form'		=> 'Digite aqui seu comentário...',
+	'reply-form'		=> 'Digite a resposta aqui...',
 	'form-tip'		=> 'HTML permitido: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; evite HTML, URLs automaticamente se tornam links, e [img]URL aqui[/img] irão mostrar uma imagem externa.',
 	'post-button'		=> 'Enviar comentário.',
 	'login'			=> 'Fazer login',
@@ -34,15 +34,17 @@ $locale = array(
 	'cancel'		=> 'Cancelar',
 	'reply-to-comment'	=> 'Responder ao comentário',
 	'edit-your-comment'	=> 'Editar seu comentário',
+	'optional'		=> 'Opcionais',
+	'required'		=> 'Obrigatório',
 	'name'			=> 'Nome',
-	'name-tip'		=> 'Nome (opcionais)',
+	'name-tip'		=> 'Nome (%s)',
 	'password'		=> 'Senha',
-	'password-tip'		=> 'Senha (opcionais, permite que você edite ou inclua este comentário)',
+	'password-tip'		=> 'Senha (%s, permite que você edite ou inclua este comentário)',
 	'confirm-password'	=> 'Confirme a Senha',
 	'email'			=> 'E-mail',
-	'email-tip'		=> 'E-mail Address (opcionais, para as notificações de e-mail)',
+	'email-tip'		=> 'E-mail Address (%s, para as notificações de e-mail)',
 	'website'		=> 'Website',
-	'website-tip'		=> 'Website (opcionais)',
+	'website-tip'		=> 'Website (%s)',
 	'logged-in'		=> 'Você logou com sucesso!',
 	'logged-out'		=> 'Você tem saiu com sucesso!',
 	'comment-needed'	=> 'Você não enviou um comentário de maneira correta. Use o formulário abaixo.',
