@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Romanian text for forms, buttons, links, and tooltips
 $locale = array(
-	'comment-form'		=> 'Scrie comentariu aici(celelalte campuri sunt optionale)',
-	'reply-form'		=> 'Scrie reply aici (celelalte campuri sunt optionale)',
+	'comment-form'		=> 'Scrie comentariu aici...',
+	'reply-form'		=> 'Scrie reply aici...',
 	'form-tip'		=> 'Caractere HTML acceptate: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; escapes HTML, URL automat devin link si [img]URL[/img] se deschid in alt tab.',
 	'post-button'		=> 'Post Comment',
 	'login'			=> 'Conectează-te',
@@ -34,20 +34,22 @@ $locale = array(
 	'cancel'		=> 'Renunta',
 	'reply-to-comment'	=> 'Reply la comentariu',
 	'edit-your-comment'	=> 'Editare comentariu',
+	'optional'		=> 'Optionale',
+	'required'		=> 'Obligatoriu',
 	'name'			=> 'Nume',
-	'name-tip'		=> 'Nume (optionale)',
+	'name-tip'		=> 'Nume (%s)',
 	'password'		=> 'Parola',
-	'password-tip'		=> 'Parola (optionale, permite să editați sau să ștergeți acest comentariu)',
+	'password-tip'		=> 'Parola (%s, permite să editați sau să ștergeți acest comentariu)',
 	'confirm-password'	=> 'Confirmă Parola',
 	'email'			=> 'Adresa E-mail',
-	'email-tip'		=> 'Adresa E-mail (optionale, pentru notificări prin e-mail)',
+	'email-tip'		=> 'Adresa E-mail (%s, pentru notificări prin e-mail)',
 	'website'		=> 'Website',
-	'website-tip'		=> 'Website (optionale)',
+	'website-tip'		=> 'Website (%s)',
 	'logged-in'		=> 'Conectare reusita!',
 	'logged-out'		=> 'Conectare eșec!',
 	'comment-needed'	=> 'Tu nu a reușit să introduceți un comentariu adecvat. Foloseste formularul de mai jos.',
 	'reply-needed'		=> 'Tu nu a reușit să introduceți un reply adecvat. Foloseste formularul de mai jos.',
-	'field-needed'		=> 'Este nevoie Câmpul de %s.',
+	'field-needed'		=> '%s Câmpul de Este obligatoriu.',
 	'post-fail'		=> 'Eșec! Tu lipse permisiunea suficientă.',
 	'post-reply'		=> 'Adauga Reply',
 	'delete'		=> 'Sterge',
