@@ -19,8 +19,8 @@ if (basename ($_SERVER['PHP_SELF']) === basename (__FILE__)) {
 
 // Turkish text for forms, buttons, links, and tooltips
 $locale = array (
-	'comment-form'		=> 'Yorumunuzu buraya yazın (diğer alanları doldurmanız zorunlu değildir)',
-	'reply-form'		=> 'Cevabınızı buraya yazın (diğer alanları doldurmanız zorunlu değildir)',
+	'comment-form'		=> 'Yorumunuzu buraya yazın...',
+	'reply-form'		=> 'Cevabınızı buraya yazın...',
 	'form-tip'		=> 'Accepted HTML: &lt;b&gt;, &lt;u&gt;, &lt;i&gt;, &lt;s&gt;, &lt;pre&gt;, &lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;, &lt;blockquote&gt;, &lt;code&gt; escapes HTML, URLs automagically become links, and [img]URL here[/img] will display an external image.',
 	'post-button'		=> 'Gönder',
 	'login'			=> 'Giriş Yap',
@@ -34,15 +34,17 @@ $locale = array (
 	'cancel'		=> 'İptal',
 	'reply-to-comment'	=> 'Yorumu cevapla',
 	'edit-your-comment'	=> 'Yorumunuzu değiştirin',
+	'optional'		=> 'Opsiyonel',
+	'required'		=> 'Gerekiyor',
 	'name'			=> 'İsim',
-	'name-tip'		=> 'İsim (opsiyonel)',
+	'name-tip'		=> 'İsim (%s)',
 	'password'		=> 'Şifre',
-	'password-tip'		=> 'Şifre (sadece yorumlarınızı değiştirmek ve silmek için gerekli olabilir)',
+	'password-tip'		=> 'Şifre (%s, Düzenlemek veya bu yorumunu silmek için izin verir)',
 	'confirm-password'	=> 'Şifreyi Onayla',
 	'email'			=> 'E-posta adresi',
-	'email-tip'		=> 'E-posta adresi (opsiyonel, e-posta ile uyarılar için.)',
+	'email-tip'		=> 'E-posta adresi (%s, e-posta ile uyarılar için)',
 	'website'		=> 'Website',
-	'website-tip'		=> 'Website (opsiyonel)',
+	'website-tip'		=> 'Website (%s)',
 	'logged-in'		=> 'Giriş yaptınız!',
 	'logged-out'		=> 'Çıkış yaptınız!',
 	'comment-needed'	=> 'Düzgün bir yorum olmadı bu? Lütfen aşağıdaki formu kullanın.',
@@ -51,7 +53,7 @@ $locale = array (
 	'post-fail'		=> 'Gönderirken hatalar oluştu. Yeterli izinlere sahip değilsiniz.',
 	'post-reply'		=> 'Cevapla',
 	'delete'		=> 'Sil',
-	'subscribe'		=> 'Kayıt ol',
+	'subscribe'		=> 'Cevaplardan beni haberdar edin',
 	'subscribe-tip'		=> 'E-posta uyarılarına kayıt ol',
 	'edit-comment'		=> 'Yorumu değiştir',
 	'save-edit'		=> 'Değişiklikleri kaydet',
